[build-system]
# Defined by PEP 518
requires = [
  "setuptools>=77.0.3",
  "setuptools_scm[toml]>=8",
]
# Defined by PEP 517
build-backend = "setuptools.build_meta"

[project]
authors = [
    {name = "Iris Contributors", email = "scitools.pub@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Visualization",
]
dynamic = [
    "dependencies",
    "readme",
    "version",
]
description = "A powerful, format-agnostic, community-driven Python package for analysing and visualising Earth science data"
keywords = [
    "cf-metadata",
    "data-analysis",
    "earth-science",
    "grib",
    "netcdf",
    "meteorology",
    "oceanography",
    "space-weather",
    "ugrid",
    "visualisation",
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
name = "scitools-iris"
requires-python = ">=3.12"

[project.urls]
Code = "https://github.com/SciTools/iris"
Discussions = "https://github.com/SciTools/iris/discussions"
Documentation = "https://scitools-iris.readthedocs.io/en/stable/"
Issues = "https://github.com/SciTools/iris/issues"

[tool.check-manifest]
ignore = [
    "lib/iris/_version.py",
    "lib/iris/std_names.py",
]

[tool.codespell]
ignore-words-list = "alpha-numeric,assertIn,degreee,discontiguities,lazyness,meaned,nin,re-use,re-uses,re-using,re-used,anc,abl,ND,Nd" # This is the full list of words that we ignore in all repositories.
skip = "./CODE_OF_CONDUCT.md,_build,*.css,*.ipynb,*.js,*.html,*.svg,*.xml,.git,generated"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.run]
branch = true
source = [
    "lib/iris",
]
omit = [
    "lib/iris/tests/*",
    "lib/iris/etc/*",
]

[tool.mypy]
# See https://mypy.readthedocs.io/en/stable/config_file.html
# https://mypy.readthedocs.io/en/stable/error_code_list2.html
# TODO: remove when MyPy fixed (see https://github.com/python/mypy/issues/17166)
disable_error_code = ["call-arg"]
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
exclude = [
    'noxfile\.py',
    'docs/src/conf\.py'
]
ignore_missing_imports = true
strict = false
warn_unreachable = true
warn_unused_configs = true

[tool.numpydoc_validation]
checks = [
    "all",  # Enable all numpydoc validation rules, apart from the following:

    # -> Docstring text (summary) should start in the line immediately
    #    after the opening quotes (not in the same line, or leaving a
    #    blank line in between)
    # Reason for ignore: A chosen house-style
    "GL01",  # Permit summary line on same line as docstring opening quotes.

    # -> Closing quotes should be placed in the line after the last text
    #    in the docstring (do not close the quotes in the same line as
    #    the text, or leave a blank line between the last text and the
    #    quotes)
    # Reason for ignore: A chosen house-style
    "GL02",  # Permit a blank line before docstring closing quotes.

    # -> Double line break found; please use only one blank line to
    #    separate sections or paragraphs, and do not leave blank lines
    #    at the end of docstrings
    # Reason for ignore: We benefit from more flexability in formatting
    "GL03",  # Ignoring.

    # -> See Also section not found
    "SA01",  # Not all docstrings require a "See Also" section.

    # -> No extended summary found
    "ES01",  # Not all docstrings require an "Extended Summary" section.

    # -> No examples section found
    "EX01",  # Not all docstrings require an "Examples" section.

    # -> No Yields section found
    "YD01",  # Not all docstrings require a "Yields" section.

    # TODO: Temporary checks to ignore, will be reviewed at a later date.
    "GL08",  # The object does not have a docstrings not have a docstring
    "PR01",  # Parameters ... not documented
    "PR02",  # Unknown parameters {....}
    "PR04",  # Parameter "...." has no type
    "PR07",  # Parameter "...." has no description
    "RT01",  # No Returns section found
    "RT03",  # Return value has no description
]
exclude = [
    '\.__eq__$',
    '\.__ne__$',
    '\.__repr__$',
]

[tool.pytest.ini_options]
addopts = [
    "-ra",
    "--durations=25",
    "--strict-config",
    "--strict-markers",
]
filterwarnings = ["default"]
log_level = "INFO"
minversion = "6.0"
required_plugins = "pytest-mock"
testpaths = "lib/iris"
xfail_strict = "True"

[tool.repo-review]
# A list of the currently failing repo-review checks.
ignore = [
    # PERMANENT IGNORES --------------------------------------------------------
    # https://learn.scientific-python.org/development/guides/style/#RF003
    "RF003",  # So that we can list non-src directories for linting.

    # TODO: TEMPORARY IGNORES, for resolving over time -------------------------
    # https://learn.scientific-python.org/development/guides/style/#PC170
    "PC170",  # pre-commit/pygrep-hooks for RST linting.
    # https://learn.scientific-python.org/development/guides/style/#PC180
    # Not possible to run on the hardware used by the majority of our developers. Might change in future!
    "PC180", # Uses prettier.
    # https://learn.scientific-python.org/development/guides/packaging-simple#PP006
    "PP006",  # Uses dev dependency group
    # https://learn.scientific-python.org/development/guides/packaging-simple/#PY005
    "PY005",  # tests/ or src/tests/ directory.
]

[tool.ruff]
# Exclude the following, in addition to the standard set of exclusions.
# https://docs.astral.sh/ruff/settings/#exclude
extend-exclude = [
    "_ff_cross_references.py",
    "um_cf_map.py",
    "docs/src/sphinxext/api_rst_formatting.py",
    "tools",
]
line-length = 88

[tool.ruff.format]
preview = false

[tool.ruff.lint]
ignore = [
    # NOTE: To find a rule code to fix, run:
    #    ruff --select="ALL" --statistics lib/iris/<sub-package>

    # flake8-commas (COM)
    # https://docs.astral.sh/ruff/rules/#flake8-commas-com
    "COM812",  # Trailing comma missing.
    "COM819",  # Trailing comma prohibited.

    # flake8-implicit-str-concat (ISC)
    # https://docs.astral.sh/ruff/rules/single-line-implicit-string-concatenation/
    # NOTE: This rule may cause conflicts when used with "ruff format".
    "ISC001",  # Implicitly concatenate string literals on one line.

    # TODO: exceptions that still need investigating are below. Might be fixable, or might become permanent (above):
    # Pyflakes (F)
    # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "F",

    # pycodestyle (E, W)
    # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "E",

    # mccabe (C90)
    # https://docs.astral.sh/ruff/rules/#mccabe-c90
    "C90",

    # pep8-naming (N)
    # https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "N",

    # pydocstyle (D)
    # https://docs.astral.sh/ruff/rules/#pydocstyle-d
    # (D-1) Permanent
    "D105",  # Missing docstring in magic method
    # (D-2) Temporary, to be removed when we are more compliant. Rare cases mmove  to (1).
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    # (D-3) Temporary, before an initial review, either fix ocurrences or move to (2).
    "D103",  # Missing docstring in public function

    # pyupgrade (UP)
    # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "UP",

    # flake8-annotations (ANN)
    # https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
    "ANN",

    # flake8-bandit (S)
    # https://docs.astral.sh/ruff/rules/#flake8-bandit-s
    "S",

    # flake8-blind-except (BLE)
    # https://docs.astral.sh/ruff/rules/#flake8-blind-except-ble
    "BLE",

    # flake8-boolean-trap (FBT)
    # https://docs.astral.sh/ruff/rules/#flake8-boolean-trap-fbt
    "FBT",

    # flake8-bugbear (B)
    # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "B",

    # flake8-builtins (A)
    # https://docs.astral.sh/ruff/rules/#flake8-builtins-a
    "A",

    # flake8-comprehensions (C4)
    # https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "C4",

    # flake8-datetimez (DTZ)
    # https://docs.astral.sh/ruff/rules/#flake8-datetimez-dtz
    "DTZ",

    # flake8-errmsg (EM)
    # https://docs.astral.sh/ruff/rules/#flake8-errmsg-em
    "EM",

    # flake8-future-annotations (FA)
    # https://docs.astral.sh/ruff/rules/#flake8-future-annotations-fa
    "FA",

    # flake8-logging-format (G)
    # https://docs.astral.sh/ruff/rules/#flake8-logging-format-g
    "G",

    # flake8-no-pep420 (INP)
    # https://docs.astral.sh/ruff/rules/#flake8-no-pep420-inp
    "INP",

    # flake8-pie (PIE)
    # https://docs.astral.sh/ruff/rules/#flake8-pie-pie
    "PIE",

    # flake8-print (T20)
    # https://docs.astral.sh/ruff/rules/#flake8-print-t20
    "T20",

    # flake8-pyi (PYI)
    # https://docs.astral.sh/ruff/rules/#flake8-pyi-pyi
    "PYI",

    # flake8-pytest-style (PT)
    # https://docs.astral.sh/ruff/rules/#flake8-pytest-style-pt
    "PT019",

    # flake8-raise (RSE)
    # https://docs.astral.sh/ruff/rules/#flake8-raise-rse
    "RSE",

    # flake8-return (RET)
    # https://docs.astral.sh/ruff/rules/#flake8-return-ret
    "RET",

    # flake8-self (SLF)
    # https://docs.astral.sh/ruff/rules/#flake8-self-slf
    "SLF",

    # flake8-slots (SLOT)
    # https://docs.astral.sh/ruff/rules/#flake8-slots-slot
    "SLOT",

    # flake8-simplify (SIM)
    # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "SIM",

    # flake8-tidy-imports (TID)
    # https://docs.astral.sh/ruff/rules/#flake8-tidy-imports-tid
    "TID",

    # flake8-type-checking (TCH)
    # https://docs.astral.sh/ruff/rules/#flake8-type-checking-tch
    "TCH",

    # flake8-unused-arguments (ARG)
    # https://docs.astral.sh/ruff/rules/#flake8-unused-arguments-arg
    "ARG",

    # flake8-use-pathlib (PTH)
    # https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
    "PTH",

    # flake8-todos (TD)
    # https://docs.astral.sh/ruff/rules/#flake8-todos-td
    "TD",

    # flake8-fixme (FIX)
    # https://docs.astral.sh/ruff/rules/#flake8-fixme-fix
    "FIX",

    # eradicate (ERA)
    # https://docs.astral.sh/ruff/rules/#eradicate-era
    "ERA",

    # pandas-vet (PD)
    # https://docs.astral.sh/ruff/rules/#pandas-vet-pd
    "PD",

    # pygrep-hooks (PGH)
    # https://docs.astral.sh/ruff/rules/#pygrep-hooks-pgh
    "PGH",

    # Pylint (PL)
    # https://docs.astral.sh/ruff/rules/#pylint-pl
    "PL",

    # tryceratops (TRY)
    # https://docs.astral.sh/ruff/rules/#tryceratops-try
    "TRY",

    # flynt (FLY)
    # https://docs.astral.sh/ruff/rules/#flynt-fly
    "FLY",

    # Perflint (PERF)
    # https://docs.astral.sh/ruff/rules/#perflint-perf
    "PERF",

    # Ruff-specific rules (RUF)
    # https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
    "RUF",
]
preview = false
select = [
    "ALL",
    # Note: the above "all" disables conflicting rules, if you want that
    # rule it needs to be explicitly enabled below:
    "D212",  # Multi-line docstring summary should start at the first line
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["iris"]

[tool.ruff.lint.mccabe]
max-complexity = 22

[tool.ruff.lint.per-file-ignores]
# https://docs.astral.sh/ruff/rules
# All test scripts

"lib/iris/tests/*.py" = [
    # https://docs.astral.sh/ruff/rules/undocumented-public-module/
    "D100",  # Missing docstring in public module
    "D205",  # 1 blank line required between summary line and description
    "D401",  # 1 First line of docstring should be in imperative mood
]

# Deprecated unittest tests

"lib/iris/tests/__init__.py" = ["PT"]
"lib/iris/tests/unit/tests/test_IrisTest.py" = ["PT"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.setuptools]
zip-safe = false

[tool.setuptools.dynamic]
dependencies = {file = "requirements/pypi-core.txt"}
readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools.packages.find]
include = ["iris*"]
where = ["lib"]

[tool.setuptools_scm]
local_scheme = "dirty-tag"
# https://setuptools-scm.readthedocs.io/en/latest/extending/#version-number-construction
version_scheme = "release-branch-semver"
write_to = "lib/iris/_version.py"
