[metadata]
author = SciTools Developers
author_email = scitools-iris-dev@googlegroups.com
classifiers =
    Development Status :: 5 Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: Visualization
description = A powerful, format-agnostic, community-driven Python package for analysing and visualising Earth science data
download_url = https://github.com/SciTools/iris
keywords =
    cf-metadata
    data-analysis
    earth-science
    grib
    netcdf
    meteorology
    oceanography
    space-weather
    ugrid
    visualisation
license = LGPL-3.0-or-later
license_file = COPYING.LESSER
long_description = file: README.md
long_description_content_type = text/markdown
name = scitools-iris
project_urls =
    Code = https://github.com/SciTools/iris
    Discussions = https://github.com/SciTools/iris/discussions
    Documentation = https://scitools-iris.readthedocs.io/en/stable/
    Issues = https://github.com/SciTools/iris/issues
url = https://github.com/SciTools/iris
version = attr: iris.__version__

[options]
include_package_data = True
install_requires =
    cartopy>=0.20
    cf-units>=3
    cftime>=1.5.0
    dask[array]>=2
    matplotlib
    netcdf4
    numpy>=1.19
    scipy
    xxhash
packages = find:
package_dir =
    =lib
python_requires =
    >=3.7
zip_safe = False

[options.packages.find]
where = lib

[options.extras_require]
docs =
    sphinx
    sphinx-copybutton
    sphinx-gallery
    sphinx_rtd_theme
    sphinxcontrib-napoleon
    sphinx-panels
test =
    asv
    filelock
    imagehash>=4.0
    nose
    pillow<7
    pre-commit
    requests
all =
    mo_pack
    nc-time-axis>=1.3
    pandas
    stratify
    %(docs)s
    %(test)s

[flake8]
# References:
#   https://flake8.readthedocs.io/en/latest/user/configuration.html
#   https://flake8.readthedocs.io/en/latest/user/error-codes.html
#   https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes

max-line-length = 80
max-complexity = 50
select = C,E,F,W,B,B950
ignore =
    # E203: whitespace before ':'
    E203,
    # E226: missing whitespace around arithmetic operator
    E226,
    # E231: missing whitespace after ',', ';', or ':'
    E231,
    # E402: module level imports on one line
    E402,
    # E501: line too long
    E501,
    # E731: do not assign a lambda expression, use a def
    E731,
    # W503: line break before binary operator
    W503,
    # W504: line break after binary operator
    W504,
exclude =
    #
    # ignore the following directories
    #
    .eggs,
    build,
    docs/src/sphinxext/*,
    tools/*,
    benchmarks/*,
    #
    # ignore auto-generated files
    #
    _ff_cross_refrences.py,
    std_names.py,
    um_cf_map.py,
    #
    # ignore third-party files
    #
    gitwash_dumper.py,
    #
    # convenience imports
    #
    lib/iris/common/__init__.py
