[build-system]
requires = ["setuptools"]

[project]
name = "custom_bms"
version = "1.0"

[tool.setuptools]
packages = ["asv_bench"]

[tool.numpydoc_validation]
checks = [
    "all",  # Enable all numpydoc validation rules, apart from the following:

    # -> Docstring text (summary) should start in the line immediately
    #    after the opening quotes (not in the same line, or leaving a
    #    blank line in between)
    "GL01",  # Permit summary line on same line as docstring opening quotes.

    # -> Closing quotes should be placed in the line after the last text
    #    in the docstring (do not close the quotes in the same line as
    #    the text, or leave a blank line between the last text and the
    #    quotes)
    "GL02",  # Permit a blank line before docstring closing quotes.

    # -> Double line break found; please use only one blank line to
    #    separate sections or paragraphs, and do not leave blank lines
    #    at the end of docstrings
    "GL03",  # Ignoring.

    # -> See Also section not found
    "SA01",  # Not all docstrings require a "See Also" section.

    # -> No extended summary found
    "ES01",  # Not all docstrings require an "Extended Summary" section.

    # -> No examples section found
    "EX01",  # Not all docstrings require an "Examples" section.

    # -> No Yields section found
    "YD01",  # Not all docstrings require a "Yields" section.

    # Temporary checks to ignore, will be reviewed at a later date.
    "GL08",  # The object does not have a docstrings not have a docstring
    "PR01",  # Parameters ... not documented
    "PR02",  # Unknown parameters {....}
    "PR04",  # Parameter "...." has no type
    "PR07",  # Parameter "...." has no description
    "RT01",  # No Returns section found
    "RT03",  # Return value has no description
]
exclude = [
    '\.__eq__$',
    '\.__ne__$',
    '\.__repr__$',
]
